--- a/config.json
+++ b/config.json
@@ -1,5 +1,157 @@
 [
   {
+    "title":"Website",
+    "drawable":"",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"Taj365",
+        "provider":"webview",
+        "arguments":[
+          "http://taj365.com/"
+        ]
+      }
+    ]
+  },
+  {
+    "title":"BBL",
+    "drawable":"",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"Scores",
+        "provider":"webview",
+        "arguments":[
+          "https://live.cricket.com.au/match/fixture?tab=bbl"
+        ]
+      },
+      {
+        "title":"Stats",
+        "provider":"webview",
+        "arguments":[
+          "https://www.cricket.com.au/big-bash/big-bash-stats"
+        ]
+      },
+      {
+        "title":"Upcoming",
+        "provider":"webview",
+        "arguments":[
+          "https://www.cricket.com.au/big-bash?tab=bbl"
+        ]
+      },
+      {
+        "title":"News",
+        "provider":"webview",
+        "arguments":[
+          "https://www.cricket.com.au/news?tab=bbl"
+        ]
+      },
+      {
+        "title":"Videos",
+        "provider":"webview",
+        "arguments":[
+          "https://www.cricket.com.au/video?tab=bbl"
+        ]
+      },
+      {
+        "title":"News",
+        "provider":"webview",
+        "arguments":[
+          "https://www.cricket.com.au/news"
+        ]
+      }
+    ]
+  },
+  {
+    "title":"Session",
+    "drawable":"",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"Bet365",
+        "provider":"webview",
+        "arguments":[
+          "https://www.bet365.com/#/IP/B3"
+        ]
+      },
+      {
+        "title":"BetWay",
+        "provider":"webview",
+        "arguments":[
+          "https://sports.betway.com/en/sports/cat/cricket"
+        ]
+      },
+      {
+        "title":"BetFair",
+        "provider":"webview",
+        "arguments":[
+          "https://www.betfair.com/sport/cricket"
+        ]
+      }
+    ]
+  },
+  {
+    "title":"Scores",
+    "drawable":"",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"Cricbuzz",
+        "provider":"webview",
+        "arguments":[
+          "https://m.cricbuzz.com/"
+        ]
+      },
+      {
+        "title":"ESPNCricInfo",
+        "provider":"webview",
+        "arguments":[
+          "https://www.espncricinfo.com/ci/content/story/news.html"
+        ]
+      },
+      {
+        "title":"Yahoo Cricket",
+        "provider":"webview",
+        "arguments":[
+          "https://cricket.yahoo.net/news"
+        ]
+      }
+    ]
+  },
+  {
+    "title":"News",
+    "drawable":"",
+    "submenu":"",
+    "iap":false,
+    "tabs":[
+      {
+        "title":"Cricbuzz",
+        "provider":"webview",
+        "arguments":[
+          "https://www.cricbuzz.com/cricket-news/latest-news"
+        ]
+      },
+      {
+        "title":"ESPNCricInfo",
+        "provider":"webview",
+        "arguments":[
+          "https://www.espncricinfo.com/live-cricket-score"
+        ]
+      },
+      {
+        "title":"Yahoo Cricket",
+        "provider":"webview",
+        "arguments":[
+          "https://cricket.yahoo.net/fixtures-results"
+        ]
+      }
+    ]
+  },
+  {
     "title":"Wordpress Blogs",
     "drawable":"",
     "submenu":"",
